--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.3.0 # Add this
   image_picker: ^1.1.2      # Add this
   url_launcher: ^6.3.0
+  mime: ^1.0.4
+  http_parser: ^4.0.2
   
 dev_dependencies:
   flutter_test:
