--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.3.0
   mime: ^1.0.4
   http_parser: ^4.0.2
+  intl: ^0.20.2
   
 dev_dependencies:
   flutter_test:
