--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.18.0
   google_sign_in: ^6.2.1
-  http: ^0.13.6
+  http: ^1.1.0
   flutter_spinkit: ^5.2.0
   lottie: ^2.6.0
   carousel_slider: ^5.0.0
@@ -43,6 +43,10 @@ dependencies:
   mime: ^1.0.4
   http_parser: ^4.0.2
   intl: ^0.20.2
+  animate_do: ^4.2.0
+  shimmer: ^3.0.0
+  google_fonts: ^6.2.1
+  flutter_staggered_animations: ^1.1.1
   
 dev_dependencies:
   flutter_test:
@@ -74,9 +78,9 @@ flutter:
     - assets/images/petrol_tank.png
     - assets/images/container.png
     - assets/images/bulker.png
-    - assets/images/truck1.jpg
-    - assets/images/truck2.jpg
-    - assets/images/truck3.jpg
-    - assets/images/truck4.jpg
-    - assets/images/truck5.jpg
+    - assets/images/banner1.jpg
+    - assets/images/banner2.jpg
+    - assets/images/banner3.jpg
+    - assets/images/banner4.jpg
+    - assets/images/banner5.jpg
     
