--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,4 +83,6 @@ flutter:
     - assets/images/banner3.jpg
     - assets/images/banner4.jpg
     - assets/images/banner5.jpg
+    - assets/images/image345.png
+
     
